Version 8.6.0
* [DXFC-297] Improved the handling of transaction flags and signs of transaction flags.
  Added a `HasSize` method to the Order SpreadOrder classes 
* [DXFC-295] Fixed a bug with incorrect filtering of orders based on MM and Quotes.

Version 8.5.3
* [DXFC-279] Fixed a bug when a snapshot created by the `CreateSnapshotSubscription` method with the specified event type and time is not closed by `Dispose`
* [DXFC-137] Fixed a bug where it was not possible to create a snapshot due to a collision of snapshot keys
* Removed the wrong parameter `date` from the dxf_simple_order_book_sample 

Version 8.5.2
* [DXFC-277] Fixed a bug when the subscription with the Time parameter could not close when calling Dispose
* [DXFC-278] Fixed a bug when event listeners can be used (by native API) after the subscription objects have been destroyed. 

Version 8.5.1
* [DXFC-276] Fixed a bug with broken wildcard subscription

Version 8.5.0
* [DXFC-266] Improved functioning of CandleDataConnection and TimeAndSaleDataConnection in Blazor\UI applications.
* [DXFC-267] Fixed a bug with possible call of callbacks/delegates from the native library when the memory of subscriptions/connections objects is cleared by the GC 
* [DXFC-268] Fixed a bug with AccessViolationException when the user called Dispose of the subscription after Dispose of the connection. 
* [DXFC-271] Fixed a bug with incorrect UTC timezone when requesting data from the CandleWebService
* [DXFC-269] .NET API common enhancements
  - The dxf_order_view_sample example now uses one symbol and source.
  - All native event fields now have public setters.
  - All native events now have public copy constructors and default constructors.
  - If no date\time is specified, then dxf_events_sample is not subscribed to time series.
  - dxf_ipf_connect_sample: added an ability to set bearer token
  - Added XML documentation for all public\protected API entities (interfaces, methods, classes etc.)